<resources>
    <string name="app_name"><![CDATA[Mind & Task Flow]]></string>
    <string name="usernm">Username</string>
    <string name="pswd">Password</string>
    <string name="bntlog">Login</string>
    <string name="btncrt">Create User</string>
    <string name="f_rec">Recuperation hint</string>
    <string name="mind">Idea</string>
    <string name="task">Task</string>
    <string name="desc">Description</string>
    <string name="tit">Title</string>
    <string name="grp">Group(Optional)</string>
    <string name="crt">Create</string>
    <string name="prit">Priority</string>
    <string name="hint">Hint</string>
    <string name="cancel">Cancel</string>
    <string name="upd">Update</string>
    <string name="search">Search</string>
    <string name="changeimage">* You must select a image</string>
</resources>